Name deps dir properly
Gets Pkg.build("BlockRegistrationScheduler") working

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ addons:
       - pkg-config
 script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia -e 'Pkg.clone(pwd()); include(Pkg.dir("BlockRegistrationScheduler","build","build.jl"))'
+  - julia -e 'Pkg.clone(pwd()); Pkg.build("BlockRegistrationScheduler")'
   - julia -e 'Pkg.test("BlockRegistrationScheduler")'
