--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,6 @@
 name = "BlockRegistrationScheduler"
 uuid = "5d60e731-3d07-5a0e-bd67-2fa232a8a749"
+version = "1.0.0"
 
 [deps]
 BlockRegistration = "96be3cfc-dfc9-41f0-9424-fd41ed36fd5e"
